Reenable Patch tests and fix #89